# flet

./: .gitignore  .~lock.Flet-apuntes.odt#  Flet-apuntes.odt  README.md
ShopCoffee/: main.py
chatweather/: main.py
hangman/: README.md  pyproject.toml
hangman/src/: main.py
hangman/src/config/: settings.py
hangman/src/controllers/: home_controller.py
hangman/src/logic/: logic_home.py
hangman/src/views/: page_home.py
memory game/: main.py
pokedex/: README.md  main.py  pyproject.toml
pokedex/config/: configPage.py
pokedex/controller/: home_controller.py
pokedex/views/: home.py
staymap/: Makefile  README.md  requirements.txt
template/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  template.db
template/src/: main.py
template/src/assets/fontwesome/: fontwesome.py  generate_fontwesome.py
template/src/components/board/: board_list.py
template/src/components/layout/: base_layout.py  footer.py  layout.py  navbar.py  sidebar.py
template/src/components/share/: carousel.py
template/src/components/shared/: datatable.py
template/src/controls/: encrypt.py  utils.py
template/src/controls/handler/: handler_settings.py
template/src/controls/product/: product_control.py  product_form.py
template/src/controls/router/: router.py  views.py
template/src/data/: memory_store.py
template/src/data/manager/: customer_manager.py  db_manager.py  product_manager.py  user_manager.py
template/src/data/models/: customer.py  product.py  user.py
template/src/scripts/: init_db.py
template/src/views/: customer_view.py  home_view.py  login.py  product_view.py  profile.py  settings_view.py  user_view.py
template/src/views/board/: board.py
trello/: Makefile  README.md
tutorial/: .gitignore  README.md  card.py  container.py  datatable.py  (+5 more)
(+31 files in other folders)
