[project]
name = "Hangman"
version = "0.1.0"
description = "Aplicación de Hangman"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Wilfredo BH", email = "liwbarqueroh@gmail.com" },
]
dependencies = [
    "flet",
    "aiohttp",
    "asyncio",
]

[tool.flet]
org = "https://solvosoft.com/es/"
product = "Hangman"
company = "Solvo"
copyright = "Copyright (C) 2025 by Solvo"

[tool.flet.app]
# ruta al directorio donde está main.py
path = "."
name = "Hangman"
icon = "./statics/image/icon.png"