[project]
name = "Pokedex"
version = "0.1.0"
description = "Aplicación de Pokedex"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Wilfredo BH", email = "liwbarqueroh@gmail.com" },
]
dependencies = [
    "flet",
    "aiohttp",
    "asyncio",
]

[tool.flet]
org = "https://solvosoft.com/es/"
product = "Pokedex"
company = "Solvo"
copyright = "Copyright (C) 2025 by Solvo"

[tool.flet.app]
# ruta al directorio donde está main.py
path = "."
name = "pokedex"
icon = "./statics/image/icon.png"